--- a/README
+++ b/README
@@ -1,7 +1,10 @@
 /*
  * Register - Bukkit Economy API for all Major Economies
  * 
- * @author: Nijikokun <nijikokun@gmail.com>
- * @copyright: Copyright (C) 2011
- * @license: GNUv3 Affero License <http://www.gnu.org/licenses/agpl-3.0.html>
+ * @author Nijikokun <nijikokun@shortmail.com> (http://twitter.com/nijikokun)
+ * @author Acrobot
+ * @attribution KHobbits (ESS17.java)
+ * @attribution Snowleo (ESS17.java)
+ * @copyright Copyright (C) 2011
+ * @license AOL license <http://aol.nexua.org>
  */
