added attribution for miho

--- a/README
+++ b/README
@@ -5,6 +5,7 @@
  * @author Acrobot
  * @attribution KHobbits (ESS17.java)
  * @attribution Snowleo (ESS17.java)
+ * @attribution miho (Maven Build Configuration)
  * @copyright Copyright (C) 2011
  * @license AOL license <http://aol.nexua.org>
  */
