--- a/README
+++ b/README
@@ -3,8 +3,11 @@
  * 
  * @author Nijikokun <nijikokun@shortmail.com> (http://twitter.com/nijikokun)
  * @author Acrobot
+ * @author LRFLEW
  * @attribution KHobbits (ESS17.java)
  * @attribution Snowleo (ESS17.java)
+ * @attribution miho (Maven Build Configuration)
+ * @attribution Spice-King (Beta Preferred Config Setup)
  * @copyright Copyright (C) 2011
  * @license AOL license <http://aol.nexua.org>
  */
