Added Craftconomy to softdepend

--- a/README
+++ b/README
@@ -6,6 +6,7 @@
  * @author LRFLEW
  * @attribution KHobbits (ESS17.java)
  * @attribution Snowleo (ESS17.java)
+ * @attribution ElgarL (CraftEco.java)
  * @attribution miho (Maven Build Configuration)
  * @attribution Spice-King (Beta Preferred Config Setup)
  * @copyright Copyright (C) 2011
